Bug 1870641 - Include size of subfolders for displayed size of collapsed folder. r=aleca a=wsmwk

--- a/mail/themes/shared/mail/about3Pane.css
+++ b/mail/themes/shared/mail/about3Pane.css
@@ -633,6 +633,10 @@ body {
   font-weight: bold;
   color: var(--layout-color-3);
   margin-inline-end: 6px;
+
+  &:empty {
+    display: none;
+  }
 }
 
 /* Message browser pane. */
